plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.5' apply false
    id 'io.spring.dependency-management' version '1.1.3' apply false
}

ext {
    set('springCloudVersion', '2022.0.4')
    set('resilience4jVersion', '2.1.0')
    set('jwtVersion', '0.11.5')
}

allprojects {
    group = 'stock'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    sourceCompatibility = '17'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
        }
    }

    dependencies {
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.junit.jupiter:junit-jupiter-api'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    }

    if (project.name in ['user_service', 'api_gateway']) {
        dependencies {
            implementation "io.jsonwebtoken:jjwt-api:${jwtVersion}"
            runtimeOnly "io.jsonwebtoken:jjwt-impl:${jwtVersion}"
            runtimeOnly "io.jsonwebtoken:jjwt-jackson:${jwtVersion}"
        }
    }

    if (project.name == 'stock_service') {
        dependencies {
            implementation 'org.springframework.retry:spring-retry'
            implementation 'org.springframework.boot:spring-boot-starter-aop'
            implementation 'org.springframework.boot:spring-boot-starter-batch'
        }
    }

    if (project.name == 'user_service') {
        dependencies {
            implementation 'org.springframework.boot:spring-boot-starter-validation'
            implementation 'org.springframework.boot:spring-boot-starter-security'
            implementation 'org.springframework.boot:spring-boot-starter-mail'
            implementation 'com.fasterxml.uuid:java-uuid-generator:4.0.1'
            implementation 'com.github.f4b6a3:uuid-creator:5.1.0'
            implementation 'org.springframework.boot:spring-boot-starter-cache'
            testImplementation 'org.assertj:assertj-core:3.24.2'
            testImplementation 'org.springframework.security:spring-security-test'
        }
    }

    if (project.name == 'social_service') {
        dependencies {
            implementation 'org.springframework.boot:spring-boot-starter-websocket'
        }
    }

    if (project.name == 'newsfeed_service') {
        dependencies {
            implementation 'org.springframework.boot:spring-boot-starter-websocket'
        }
    }

    if (project.name == 'eureka_server') {
        dependencies {
            implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
        }
    }

    if (project.name == 'api_gateway') {
        dependencies {
            implementation 'io.micrometer:micrometer-registry-prometheus'
            implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
            implementation "io.github.resilience4j:resilience4j-spring-boot3:${resilience4jVersion}"
            implementation "io.github.resilience4j:resilience4j-reactor:${resilience4jVersion}"
            implementation 'org.springframework.boot:spring-boot-starter-actuator'
            implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
            implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
        }
    }

    if (!(project.name in ['eureka_server', 'api_gateway'])) {
        dependencies {
            implementation "io.github.resilience4j:resilience4j-spring-boot2:${resilience4jVersion}"
            implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
            implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
            implementation 'org.apache.kafka:kafka-streams'
            implementation 'org.springframework.boot:spring-boot-starter-web'
            implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
            implementation 'org.springframework.kafka:spring-kafka'
            implementation 'com.mysql:mysql-connector-j'
            implementation 'org.springframework.boot:spring-boot-starter-data-redis'
            implementation 'redis.clients:jedis'
            testImplementation 'org.springframework.kafka:spring-kafka-test'
            testImplementation 'org.awaitility:awaitility:4.2.0'
            testImplementation 'org.mockito:mockito-core'
            testImplementation 'org.mockito:mockito-junit-jupiter'
            testRuntimeOnly 'com.h2database:h2'
            testImplementation 'org.testcontainers:junit-jupiter:1.17.6'
            testImplementation 'org.testcontainers:kafka:1.17.6'
        }
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
        systemProperty 'spring.profiles.active', System.getProperty('spring.profiles.active', 'test')

        testLogging {
            events 'passed', 'skipped', 'failed'
        }
    }

    tasks.named('test') {
        exclude '**/IntegrationTest*'
    }

    tasks.register('integrationTest', Test) {
        description = "Runs integration tests for ${project.name}"
        group = 'verification'
        testClassesDirs = sourceSets.test.output.classesDirs
        classpath = sourceSets.test.runtimeClasspath
        include '**/IntegrationTest*'
        shouldRunAfter tasks.named('test')
        systemProperty 'spring.profiles.active', 'integration'
    }
}

tasks.register('integrationTest') {
    description = 'Runs integration tests for all subprojects'
    group = 'verification'
    dependsOn(subprojects.collect { "${it.path}:integrationTest" })
}
